# mc-core

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  requirements.txt
src/: CMakeLists.txt  mc-core-config.cmake  mc-core-config.cmake.in  mc-coreConfig.cmake
src/mc/: array.hpp  cassert.hpp  cctype.hpp  climits.hpp  cmath.hpp  complex.hpp  concepts.hpp  config.hpp  core.hpp  exception.hpp  filesystem.hpp  format.hpp  iomanip.hpp  iterator.hpp  map.hpp  math.hpp  memory_resource.hpp  mutex.hpp  numeric.hpp  optional.hpp  ostream.hpp  preprocessor.hpp  queue.hpp  random.hpp  set.hpp  stdexcept.hpp  string.hpp  string_view.hpp  tuple.hpp  utility.hpp  variant.hpp  vector.hpp
src/mc/config/: compiler_msvc.hpp  platform_android.hpp  platform_darwin.hpp  platform_linux.hpp
src/mc/container/: FlatMap.hpp  FlatSet.hpp  LockFreeQueue.hpp  SmallVector.hpp  StaticVector.hpp  ThreadSafeQueue.hpp
src/mc/core/: algorithm.hpp  array.hpp  atomic.hpp  bit.hpp  bit.test.cpp  bitset.hpp  cassert.hpp  cctype.hpp  cfloat.hpp  chrono.hpp  climits.hpp  cmath.hpp  cmath.test.cpp  complex.hpp  concepts.hpp  config.hpp  cstddef.hpp  cstdint.hpp  cstdlib.hpp  cstring.hpp  exception.hpp  expected.hpp  expected.test.cpp  filesystem.hpp  format.hpp  format.test.cpp  fstream.hpp  functional.hpp  future.hpp  initializer_list.hpp  iomanip.hpp  iostream.hpp  iterator.hpp  iterator.test.cpp  json.hpp  limits.hpp  map.hpp  mdspan.hpp  mdspan.test.cpp  memory.hpp  (+34 more)
src/mc/core/_algorithm/: ranges.hpp
src/mc/core/_bit/: bit_cast.hpp  byteswap.hpp  byteswap.test.cpp  int_pow2.hpp
src/mc/core/_cmath/: cmath.hpp  cmath.test.cpp  pow.hpp
src/mc/core/_config/: compiler_clang.hpp  compiler_gcc.hpp  compiler_msvc.hpp  debug_break.hpp  documentation.hpp  platform_android.hpp  platform_bsd.hpp  platform_darwin.hpp  platform_emscripten.hpp  platform_linux.hpp  platform_win32.hpp  preprocessor.hpp  thread_safety_attributes.hpp
src/mc/core/_cstddef/: byte.hpp  ptrdiff_t.hpp  size_t.hpp  ssize_t.hpp
src/mc/core/_cstdint/: int_t.hpp
src/mc/core/_exception/: raise.hpp  raise.test.cpp
src/mc/core/_expected/: bad_expected_access.hpp  expected.hpp  expected.test.cpp  unexpected.hpp
src/mc/core/_format/: format.hpp
src/mc/core/_iterator/: nonmember_container_access.hpp  ssize.hpp
src/mc/core/_map/: flat_map.hpp
src/mc/core/_memory/: shared_ptr.hpp  unique_ptr.hpp
src/mc/core/_numbers/: constants.hpp  numbers.test.cpp
src/mc/core/_numeric/: gcd_lcm.hpp  ranges.hpp
src/mc/core/_print/: print.hpp
src/mc/core/_queue/: lock_free_queue.hpp  thread_safe_queue.hpp  thread_safe_queue.test.cpp
src/mc/core/_random/: xorshift32.hpp  xorshift32.impl.hpp  xorshift32.test.cpp  xorshift64.hpp  xorshift64.impl.hpp  xorshift64.test.cpp
src/mc/core/_ranges/: ranges.test.cpp
src/mc/core/_scope/: scope_exit.hpp  scope_exit.test.cpp  scope_fail.hpp  scope_fail.test.cpp
src/mc/core/_set/: flat_set.hpp
src/mc/core/_string_view/: cstring_view.hpp  string_view.hpp
src/mc/core/_type_traits/: type_traits_N4389.hpp  void_t.hpp
src/mc/core/_units/: duration.hpp  frame_count.hpp
src/mc/core/_utility/: as_const.hpp  integer_comparison_functions.hpp  integer_comparison_functions.test.cpp  pair.hpp
src/mc/core/_vector/: pmr_vector.hpp  small_vector.hpp  static_vector.hpp  vector.hpp
src/mc/core/_warning/: ignore_unused.hpp
src/mc/core/config/: compiler_clang.hpp  compiler_gcc.hpp  compiler_msvc.hpp  platform_android.hpp  platform_bsd.hpp  platform_darwin.hpp  platform_emscripten.hpp  platform_linux.hpp  platform_win32.hpp  preprocessor.hpp
src/mc/core/container/: FlatMap.hpp  FlatSet.hpp  LockFreeQueue.hpp  SmallVector.hpp  StaticVector.hpp  ThreadSafeQueue.hpp  flat_map.hpp  flat_set.hpp  lock_free_queue.hpp  small_vector.hpp  static_vector.hpp  thread_safe_queue.hpp
src/mc/core/stdx/: algorithm_P0025.hpp  bit_P0476.hpp  bit_P0553.hpp  bit_P1956.hpp  cmath_P0226.hpp  exception_N4152.hpp  iterator_N4280.hpp  iterator_P1227.hpp  numbers_P0631.hpp  numeric_P0024.hpp  numeric_P0295.hpp  scope_exit.hpp  scope_fail.hpp  scope_success.hpp  type_traits_N3911.hpp  type_traits_N4389.hpp  utility_P0007.hpp  utility_P0586.hpp
src/mc/core/units/: Duration.hpp  FrameCount.hpp  Frequency.hpp  TreatAsFloatingPoint.hpp
src/mc/core/units/fwd/: Frequency.hpp  TreatAsFloatingPoint.hpp
src/mc/math/algorithm/: approx.hpp  correlation.hpp  crossProduct.hpp  dotProduct.hpp  linearSolve.hpp  norm.hpp  normalize.hpp  normalized.hpp
src/mc/math/dense/: DynamicMatrix.hpp  DynamicVector.hpp
src/mc/math/iterator/: begin.hpp  data.hpp  empty.hpp  end.hpp  size.hpp
src/mc/math/matrix/: MatrixSize.hpp  determinant.hpp  findRowWithMaxElement.hpp  inverse.hpp  isNonZero.hpp  isRowEchelon.hpp  isSquare.hpp  join.hpp  makeIdentity.hpp  multiplyAddRow.hpp  multiplyRow.hpp  operators.hpp  rank.hpp  rowEchelon.hpp  splitColumns.hpp  subMatrix.hpp  swapRow.hpp
src/mc/math/traits/: IsDenseMatrix.hpp  IsMatrix.hpp  IsSparseMatrix.hpp  IsVector.hpp
src/mc/math/vector/: operators.hpp
src/mc/stdx/: algorithm_P0025.hpp  bit_P0476.hpp  bit_P0553.hpp  bit_P1956.hpp  cmath_P0226.hpp  exception_N4152.hpp  iterator_N4280.hpp  iterator_P1227.hpp  numbers_P0631.hpp  numeric_P0024.hpp  type_traits_N3911.hpp  type_traits_N4389.hpp  utility_P0007.hpp  utility_P0586.hpp
src/mc/units/: Duration.hpp  FrameCount.hpp  Frequency.hpp  TreatAsFloatingPoint.hpp
src/mc/units/fwd/: Frequency.hpp  TreatAsFloatingPoint.hpp
tests/: CMakeLists.txt  all_headers.cpp  any.cpp  core.cpp  simd.cpp
tests/container/: ThreadSafeQueue.cpp
tests/dsp/: Frequency.cpp
tests/math/algorithm/: correlation.test.cpp  crossProduct.test.cpp  dotProduct.test.cpp  linearSolve.test.cpp  normalize.test.cpp  normalized.test.cpp
tests/math/dense/: DynamicMatrix.test.cpp  DynamicVector.test.cpp
tests/stdx/: bit.cpp  bit_test.cpp  format.cpp  iterator.cpp  numbers.cpp  numeric.cpp  scope.cpp
tests/units/: Duration.cpp  FrameCount.cpp  Frequency.cpp
(+150 files in other folders)
